--- a/todo-app/public/login.html
+++ b/todo-app/public/login.html
@@ -90,7 +90,7 @@
                             <input type="password" placeholder="Password" id="password">
                             <small></small>
                             </div>
-                            <button type="submit" class="btn" id="register" onclick="reDirect()">Resgister</button>
+                            <button type="submit" class="btn" id="register">Resgister</button>
                             
                         </form>
                     </div>
